user id as string, settable via API
